tests/error/poly_errors_py312/variadic3.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct[*Ts]:
    pass


MyStruct.compile()
