tests/error/poly_errors_py312/variadic3.err
Error: Unsupported (at $FILE:5:15)
  | 
3 | 
4 | @guppy.struct
5 | class MyStruct[*Ts]:
  |                ^^^ Variadic generic parameters are not supported

Guppy compilation failed due to 1 previous error
